Update navigation links to new paths

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <nav class="navbar">
             <div class="nav-logo"><img class="logo" src="res/logo/brand-logo.svg" alt=""></div>
             <div class="nav-links ">
-                <a class="nav-links-dot-rel nav-links-dot-item" href="/">Home</a>
-                <a  href="/pages/about.html">About</a>
-                <a href="/pages/menu.html">Menu</a>
-                <a href="./pages/franchise.html">Franchise</a>
+                <a class="nav-links-dot-rel nav-links-dot-item" href="/knight-bite/">Home</a>
+                <a  href="/knight-bite/pages/about.html">About</a>
+                <a href="/knight-bite/pages/menu.html">Menu</a>
+                <a href="/knight-bite/pages/franchise.html">Franchise</a>
 
 
             </div>
