--- a/pages/franchise.html
+++ b/pages/franchise.html
@@ -23,10 +23,10 @@
             </div>
 
             <div class="nav-links">
-                <a href="/">Home</a>
-                <a href="/pages/about.html">About</a>
-                <a href="/pages/menu.html">Menu</a>
-                <a class="nav-links-dot-rel nav-links-dot-item" href="/pages/franchise.html">Franchise</a>
+                <a href="/knight-bite/">Home</a>
+                <a href="/knight-bite/pages/about.html">About</a>
+                <a href="/knight-bite/pages/menu.html">Menu</a>
+                <a class="nav-links-dot-rel nav-links-dot-item" href="/knight-bite/pages/franchise.html">Franchise</a>
             </div>
         </nav>
 
@@ -122,7 +122,7 @@
                             <div class="right">
 
 
-                                <form action="/" method="post">
+                                <form action="/knight-bite/" method="post">
 
                                     <input type="text" name="" id="" placeholder="First Name*">
                                     <input type="text" name="" id="" placeholder="Second Name*">
