--- a/pages/menu.html
+++ b/pages/menu.html
@@ -19,10 +19,10 @@
         <nav class="navbar">
             <div class="nav-logo"><img class="logo" src="../res/logo/brand-logo.svg" alt=""></div>
             <div class="nav-links ">
-                <a href="/">Home</a>
-                <a href="/pages/about.html">About</a>
-                <a class="nav-links-dot-rel nav-links-dot-item" href="/pages/menu.html">Menu</a>
-                <a href="/pages/franchise.html">Franchise</a>
+                <a href="/knight-bite/">Home</a>
+                <a href="/knight-bite/pages/about.html">About</a>
+                <a class="nav-links-dot-rel nav-links-dot-item" href="/knight-bite/pages/menu.html">Menu</a>
+                <a href="/knight-bite/pages/franchise.html">Franchise</a>
             </div>
         </nav>
 
