--- a/pages/about.html
+++ b/pages/about.html
@@ -21,8 +21,8 @@
             <div class="nav-links ">
                 <a href="/knight-bite/">Home</a>
                 <a class="nav-links-dot-rel nav-links-dot-item" href="/knight-bite//pages/about.html">About</a>
-                <a href="/knight-bite//pages/menu.html">Menu</a>
-                <a href="/knight-bite//pages/franchise.html">Franchise</a>
+                <a href="/knight-bite/pages/menu.html">Menu</a>
+                <a href="/knight-bite/pages/franchise.html">Franchise</a>
             </div>
         </nav>
 
